# neuropoly-db

./: .gitignore  .gitmodules  README.md  docker-compose.prod.yml  docker-compose.yml  local_nb_nodes.json  poc1_results.json  pyproject.toml  pytorch-requirements.txt  requirements.txt  setup-pytorch.sh  template.env
.devcontainer/: devcontainer-lock.json  devcontainer.json  docker-compose.yml  initialize.sh  postCreate.sh  ssh-agent.sh  terminal-header.sh
.github/: copilot-instructions.md
config/: categorical_terms.json  imaging_extensions.json  neuropoly_imaging_modalities.json
docs/: 00-overview.md  01-vector-db-concepts.md  02-elasticsearch-architecture.md  03-bids-metadata.md  04-kibana-dashboards.md  05-next-steps.md  DEVELOPMENT.md  ROADMAP.md
notebooks/: 01-setup-and-ingest.ipynb  02-keyword-and-filtered-search.ipynb  03-vector-search.ipynb  04-kibana-exploration.ipynb  05-advanced-query-encoding.ipynb  06-poc1-better-encoder-expansion.ipynb  07-poc2-splade-rrf-benchmark.ipynb  08-poc3-encoder-comparison.ipynb  09-encoding-field-gap-investigation.ipynb  poc1_results.json
scripts/: backup.sh  deploy.sh  download_dataset.sh  ingest.py  inject_vocab_patch.py  neuropoly_api_entrypoint.sh  setup_index_template.py  test_course.sh
seed-datasets/: .gitignore  README.md  whole-spine.jsonld
test/: test_age_format.py  test_annotation_automation.py  test_annotation_steps.py  test_bids_standardizer.py  test_browser_session.py  test_cli_regression.py  test_download.py  test_download_progress.py  test_duplicate_resolver.py  test_factories.py  test_fuzzy_matcher.py  (+14 more)
(+111 files in other folders)
